# soft_sim

./: .gitignore  CMakeLists.txt  cph_output.txt  cph_output_less_daming.txt  cph_output_no_gravity.txt  cube_output.txt  test.txt  triangle_output_less_daming.txt  triangle_output_longer.txt
meshtools/: parse_mesh.m  vis_mesh.m
odesim/: Makefile  Mesh.cpp  Mesh.hpp  explore.cpp  sim.cpp  test_mesh.xml  valgrind_log.txt  valgrind_log_2.txt
python_scripts/: data_dump.py  plot_points.py
